placeOrder: fix style overflow

--- a/src/styl/exchange.styl
+++ b/src/styl/exchange.styl
@@ -46,6 +46,8 @@
 .placeOrder
 	button
 		color white !important
+	.inputRow
+		overflow hidden
 	.inputRow .text-field
 		float left
 		width 60%
